--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,128 +8,221 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Project"
-        android:textColor="@color/gray_color"
-        android:textSize="12dp" />
-
-    <EditText
-        android:id="@+id/project"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/drawable_edit_text"
-        android:imeOptions="actionNext"
-        android:inputType="text"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@color/dark_gradient_color_1"
-        android:textColorHint="@color/gray_color"
-        android:textSize="12dp"
-        android:textCursorDrawable="@null"
-        android:singleLine="true"
-        android:maxLength="20"/>
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="Site"
-        android:textColor="@color/gray_color"
-        android:textSize="12dp" />
-
-    <EditText
-        android:id="@+id/site"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/drawable_edit_text"
-        android:imeOptions="actionNext"
-        android:inputType="text"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@color/dark_gradient_color_1"
-        android:textColorHint="@color/gray_color"
-        android:textSize="12dp"
-        android:singleLine="true"
-        android:textCursorDrawable="@null"
-        android:maxLength="20"/>
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="Operator"
-        android:textColor="@color/gray_color"
-        android:textSize="12dp" />
-
-    <EditText
-        android:id="@+id/operator"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/drawable_edit_text"
-        android:imeOptions="actionNext"
-        android:inputType="text"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@color/dark_gradient_color_1"
-        android:textColorHint="@color/gray_color"
-        android:textSize="12dp"
-        android:textCursorDrawable="@null"
-        android:singleLine="true"
-        android:maxLength="20"/>
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="Subcon"
-        android:textColor="@color/gray_color"
-        android:textSize="12dp" />
-
-    <EditText
-        android:id="@+id/subcon"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/drawable_edit_text"
-        android:imeOptions="actionNext"
-        android:inputType="text"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@color/dark_gradient_color_1"
-        android:textColorHint="@color/gray_color"
-        android:textSize="12dp"
-        android:singleLine="true"
-        android:textCursorDrawable="@null"
-        android:maxLength="20"/>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:id="@+id/imageView"
-        />
-
     <LinearLayout
+        android:id="@+id/llform"
         android:layout_width="match_parent"
-        android:layout_height="0dip"
-        android:layout_marginBottom="10dp"
-        android:layout_weight="1"
-        android:gravity="bottom"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="visible">
 
-        <Button
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Project"
+            android:textColor="@color/gray_color"
+            android:textSize="12dp" />
+
+        <EditText
+            android:id="@+id/project"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/drawable_edit_text"
+            android:imeOptions="actionNext"
+            android:inputType="text"
+            android:maxLength="20"
+            android:singleLine="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/dark_gradient_color_1"
+            android:textColorHint="@color/gray_color"
+            android:textCursorDrawable="@null"
+            android:textSize="12dp" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="Site"
+            android:textColor="@color/gray_color"
+            android:textSize="12dp" />
+
+        <EditText
+            android:id="@+id/site"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/drawable_edit_text"
+            android:imeOptions="actionNext"
+            android:inputType="text"
+            android:maxLength="20"
+            android:singleLine="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/dark_gradient_color_1"
+            android:textColorHint="@color/gray_color"
+            android:textCursorDrawable="@null"
+            android:textSize="12dp" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="Operator"
+            android:textColor="@color/gray_color"
+            android:textSize="12dp" />
+
+        <EditText
+            android:id="@+id/operator"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/drawable_edit_text"
+            android:imeOptions="actionNext"
+            android:inputType="text"
+            android:maxLength="20"
+            android:singleLine="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/dark_gradient_color_1"
+            android:textColorHint="@color/gray_color"
+            android:textCursorDrawable="@null"
+            android:textSize="12dp" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="Subcon"
+            android:textColor="@color/gray_color"
+            android:textSize="12dp" />
+
+        <EditText
+            android:id="@+id/subcon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/drawable_edit_text"
+            android:imeOptions="actionNext"
+            android:inputType="text"
+            android:maxLength="20"
+            android:singleLine="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/dark_gradient_color_1"
+            android:textColorHint="@color/gray_color"
+            android:textCursorDrawable="@null"
+            android:textSize="12dp" />
+
+    </LinearLayout>
+
+
+    <FrameLayout
+        android:id="@+id/viewtotakess"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:scaleType="centerCrop"
+             />
+        <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/llDataSet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:background="@color/colorPrimary"
-            android:gravity="center"
-            android:text="Capture Picture"
-            android:id="@+id/openCameraBtn"
-            android:textColor="@color/white_color" />
+            android:layout_margin="10dp"
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tvProject"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Project"
+                android:textColor="@color/gray_color" />
+
+            <TextView
+                android:id="@+id/tvSite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Site"
+                android:textColor="@color/gray_color" />
+
+            <TextView
+                android:id="@+id/tvOperator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Operator"
+                android:textColor="@color/gray_color" />
+
+            <TextView
+                android:id="@+id/tvSubcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SubCon"
+                android:textColor="@color/gray_color" />
+
+            <TextView
+                android:id="@+id/tvAddress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Address"
+                android:textColor="@color/gray_color" />
+
+            <TextView
+                android:id="@+id/tvLat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/latitude_label"
+                android:textColor="@color/gray_color" />
+
+            <TextView
+                android:id="@+id/tvlong"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/longitude_label"
+                android:textColor="@color/gray_color" />
+
+            <TextView
+                android:id="@+id/tvRemarks"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Remarks"
+                android:textColor="@color/gray_color" />
+
+        </LinearLayout>
+    </FrameLayout>
+
+
+    <Button
+        android:id="@+id/openCameraBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:text="Capture Picture"
+        android:textColor="@color/white_color"
+        android:visibility="visible" />
+
+
+    <Button
+        android:id="@+id/savepicture"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:text="Save Picture"
+        android:textColor="@color/white_color"
+        android:visibility="gone" />
+
 
 </LinearLayout>
