--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,6 +126,7 @@
 
 
         <ImageView
+            android:visibility="visible"
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -146,56 +147,56 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Project"
-                android:textColor="@color/gray_color" />
+                android:textColor="@android:color/holo_red_dark" />
 
             <TextView
                 android:id="@+id/tvSite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Site"
-                android:textColor="@color/gray_color" />
+                android:textColor="@android:color/holo_red_dark" />
 
             <TextView
                 android:id="@+id/tvOperator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Operator"
-                android:textColor="@color/gray_color" />
+                android:textColor="@android:color/holo_red_dark" />
 
             <TextView
                 android:id="@+id/tvSubcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="SubCon"
-                android:textColor="@color/gray_color" />
+                android:textColor="@android:color/holo_red_dark" />
 
             <TextView
                 android:id="@+id/tvAddress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Address"
-                android:textColor="@color/gray_color" />
+                android:textColor="@android:color/holo_red_dark" />
 
             <TextView
                 android:id="@+id/tvLat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/latitude_label"
-                android:textColor="@color/gray_color" />
+                android:textColor="@android:color/holo_red_dark" />
 
             <TextView
                 android:id="@+id/tvlong"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/longitude_label"
-                android:textColor="@color/gray_color" />
+                android:textColor="@android:color/holo_red_dark" />
 
             <TextView
                 android:id="@+id/tvRemarks"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Remarks"
-                android:textColor="@color/gray_color" />
+                android:textColor="@android:color/holo_red_dark" />
 
         </LinearLayout>
     </FrameLayout>
@@ -220,7 +221,7 @@
         android:layout_gravity="bottom"
         android:background="@color/colorPrimary"
         android:gravity="center"
-        android:text="Save Picture"
+        android:text="Reset"
         android:textColor="@color/white_color"
         android:visibility="gone" />
 
