--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="dark_gradient_color_2">#545663</color>
     <color name="green_color">#0bb981</color>
     <color name="white_color">#ffffff</color>
+    <color name="dark_purple_color_1">#622774</color>
+    <color name="purple_color_2">#EA6060</color>
 </resources>
