--- a/app/src/main/res/drawable/drawable_edit_text.xml
+++ b/app/src/main/res/drawable/drawable_edit_text.xml
@@ -3,10 +3,10 @@
 
     <solid
         android:width="1dp"
-        android:color="@android:color/white" />
+        android:color="@android:color/transparent" />
     <stroke
         android:width="1dp"
-        android:color="@color/gray_color" />
+        android:color="@color/white_color" />
     <corners android:radius="5dp" />
     <padding
         android:bottom="0dp"
